@@ -1,5 +1,3 @@
-- add manual profile
-
 - triggers cannot have to same battery level
 
 - remove strings: prefEnableProfilesOn and prefEnableProfilesOff
