@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="version">2.6.4</string> 
+    <string name="version">2.6.5-rc1</string> 
 </resources>
