@@ -6,6 +6,7 @@ import ch.amana.android.cputuner.model.IGovernorModel;
 public abstract class GovernorBaseFragment extends Fragment {
 
 	protected GovernorFragmentCallback callback;
+	protected boolean updateVirtGov = false;
 
 	private IGovernorModel governor;
 
@@ -30,5 +31,9 @@ public abstract class GovernorBaseFragment extends Fragment {
 	public abstract void updateModel();
 
 	public abstract void updateView();
+
+	public void updateVirtGov(boolean b) {
+		updateVirtGov = true;
+	}
 
 }
